--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-Gerardo Solano CV
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Curriculum Vitae</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <nav>
+      <div class="text-nav">
+        <a href="index.html"><h2>Gerardo Solano</h2></a>
+      </div>
+      <ul>
+        <li><a href="#informacion">Información</a></li>
+        <li><a href="#sobremi">Sobre Mí</a></li>
+        <li><a href="#formacion">Formación Académica</a></li>
+        <li><a href="#proyectos">Proyectos</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="informacion">
+      <h2>Información</h2>
+      <p>Dirección:</p>
+      <p>Teléfono:</p>
+      <p>Email:</p>
+    </section>
+    <section id="sobremi">
+      <h2>Sobre Mí</h2>
+      <p>Introduce aquí una breve descripción sobre ti, tus habilidades y experiencia relevante.</p>
+    </section>
+    <section id="formacion">
+      <h2>Formación Académica</h2>
+      <ul>
+        <li>Grado en X - Universidad de X (Fecha de graduación)</li>
+        <li>Maestría en X - Universidad de X (Fecha de graduación)</li>
+      </ul>
+    </section>
+    <section id="proyectos">
+        <h2>Proyectos</h2>
+        <ul>
+          <li><img src="" alt=""><a href="/Calculadora/index.html">Calculadora</a></li>
+          <li><img src="" alt=""><a href="/Clima/index.html">Clima</a></li>
+          <li><img src="" alt=""><a href="apis">REST API</a></li>
+        </ul>
+      </section>
+  </main>
+  <footer>
+    <p>&copy; 2023 - Nombre y Apellido</p>
+  </footer>
+</body>
+</html>
