--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,42 +13,64 @@
         <a href="index.html"><h2>Gerardo Solano</h2></a>
       </div>
       <ul>
-        <li><a href="#informacion">Información</a></li>
-        <li><a href="#sobremi">Sobre Mí</a></li>
-        <li><a href="#formacion">Formación Académica</a></li>
-        <li><a href="#proyectos">Proyectos</a></li>
+        <li><a href="#info">Information</a></li>
+        <li><a href="#about-me">About me</a></li>
+        <li><a href="#edu">Education</a></li>
+        <li><a href="#projects">Projects</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <section id="informacion">
-      <h2>Información</h2>
-      <p>Dirección:</p>
-      <p>Teléfono:</p>
-      <p>Email:</p>
+    <section id="info">
+      <h2>CONTACT</h2>
+      <h3>Jesús Gerardo Solano Victoria</h3>
+      <div class="info-container">
+        <p id="location">Veracruz, México.</p>
+        <p id="tel">+522712240554</p>
+        <p id="email">gerardosolano.contact@gmail.com</p>
+      </div>
+      <div class="social-media">
+        <a href="https://github.com/GerardoSolanoo">Github<img src="/img/github.png" alt=""></a>
+      </div>
     </section>
-    <section id="sobremi">
-      <h2>Sobre Mí</h2>
-      <p>Introduce aquí una breve descripción sobre ti, tus habilidades y experiencia relevante.</p>
+    <section id="about-me">
+      <h2>ABOUT ME</h2>
+      <p>As an aspiring software engineer, I have developed a strong foundation in programming, particularly in Java and Python. 
+        I am proficient in Linux/Unix and Bash scripting, which I use to automate tasks and manage system resources. 
+        I also have basic knowledge in C++ and SQL. Recently, I have started learning Flutter, a framework for developing mobile applications. 
+        My skills include software development methodologies, data structures, algorithms, and object-oriented programming. 
+        I am a quick learner, analytical, and detail-oriented. 
+        I am passionate about technology and its potential to solve complex problems.</p>
     </section>
-    <section id="formacion">
-      <h2>Formación Académica</h2>
-      <ul>
-        <li>Grado en X - Universidad de X (Fecha de graduación)</li>
-        <li>Maestría en X - Universidad de X (Fecha de graduación)</li>
+    <section id="edu">
+      <h2>EDUCATION</h2>
+        <div class="principal-edu">
+          <div class="university">
+            <p>Universidad Veracruzana</p>
+          </div>
+          <div class="expected-year">
+            <i><p>Expected 11/25</p></i>
+          </div>
+          <div class="bachelor">
+            <p><b>Bachelor of engineering:</b> Software Engineering</p>
+          </div>
+        </div>
+      <h2>LANGUAGES</h2>
+      <div class="lang">
+        <p>Spanish - First language</p>
+        <p>English - B1</p>
+      </div>
+    </section>
+    <section id="projects">
+      <h2>PROJECTS</h2>
+      <ul class="projects-container">
+        <li><a href="/Calculadora/index.html"><img src="/img/calculator.png" alt=""></a></li>
+        <li><a href="/Clima/index.html"><img src="/img/weather.png" alt=""></a></li>
       </ul>
-    </section>
-    <section id="proyectos">
-        <h2>Proyectos</h2>
-        <ul>
-          <li><img src="" alt=""><a href="/Calculadora/index.html">Calculadora</a></li>
-          <li><img src="" alt=""><a href="/Clima/index.html">Clima</a></li>
-          <li><img src="" alt=""><a href="apis">REST API</a></li>
-        </ul>
-      </section>
+    </section>    
   </main>
   <footer>
-    <p>&copy; 2023 - Nombre y Apellido</p>
+    <p>&copy; 2023 - Gerardo Solano</p>
   </footer>
 </body>
 </html>
