--- a/index.html
+++ b/index.html
@@ -1,76 +1,151 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Curriculum Vitae</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header>
-    <nav>
-      <div class="text-nav">
-        <a href="index.html"><h2>Gerardo Solano</h2></a>
-      </div>
-      <ul>
-        <li><a href="#info">Information</a></li>
-        <li><a href="#about-me">About me</a></li>
-        <li><a href="#edu">Education</a></li>
-        <li><a href="#projects">Projects</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section id="info">
-      <h2>CONTACT</h2>
-      <h3>Jesús Gerardo Solano Victoria</h3>
-      <div class="info-container">
-        <p id="location">Veracruz, México.</p>
-        <p id="tel">+522712240554</p>
-        <p id="email">gerardosolano.contact@gmail.com</p>
-      </div>
-      <div class="social-media">
-        <a href="https://github.com/GerardoSolanoo">Github<img src="/img/github.png" alt=""></a>
-      </div>
-    </section>
-    <section id="about-me">
-      <h2>ABOUT ME</h2>
-      <p>As an aspiring software engineer, I have developed a strong foundation in programming, particularly in Java and Python. 
-        I am proficient in Linux/Unix and Bash scripting, which I use to automate tasks and manage system resources. 
-        I also have basic knowledge in C++ and SQL. Recently, I have started learning Flutter, a framework for developing mobile applications. 
-        My skills include software development methodologies, data structures, algorithms, and object-oriented programming. 
-        I am a quick learner, analytical, and detail-oriented. 
-        I am passionate about technology and its potential to solve complex problems.</p>
-    </section>
-    <section id="edu">
-      <h2>EDUCATION</h2>
-        <div class="principal-edu">
-          <div class="university">
-            <p>Universidad Veracruzana</p>
-          </div>
-          <div class="expected-year">
-            <i><p>Expected 11/25</p></i>
-          </div>
-          <div class="bachelor">
-            <p><b>Bachelor of engineering:</b> Software Engineering</p>
-          </div>
+    <!DOCTYPE html>
+    <html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Gerardo Solano</title>
+        <link rel="stylesheet" href="/styles.css">
+    </head>
+    <body>
+        <div class="inner-card">
+            <header>
+                <div class="text-header">
+                    <div class="title-header">
+                        <h1>Gerardo Solano</h1>
+                    </div>
+                    <h3>Software engineering student</h3>
+                    <div class="horizontal-separation">
+                    </div>
+                    <div class="contact-info">
+                        <div class="contact-items">
+                            <img src="/img/contact-img/phone-call.png" alt="">
+                            <p>+52 271 224 0554</p>
+                        </div>
+                        <div class="contact-items">
+                            <img src="/img/contact-img/email.png" alt="">
+                            <p>gerardosolano.contact@gmail.com</p>
+                        </div>
+                        <div class="contact-items">
+                            <img src="/img/contact-img/pin.png" alt="">
+                            <p>Ver, MEX.</p>
+                        </div>
+                    </div>
+                </div>
+            </header>
+            <main>
+                <div class="left-side">
+                    <div class="horizontal-separation">
+                    </div>
+                    <div class="education">
+                        <h3>EDUCATION</h3>
+                        <div class="education-item">
+                            <h4>Software Engineering</h4>
+                            <h4>Universidad Veracruzana</h4>
+                            <h4>Nov 2025</h4>
+                        </div>
+                        <div class="education-item">
+                            <h4>Bookkeeper</h4>
+                            <h4>Centro de Estudios Tecnológicos, Industriales y de Servicios</h4>
+                            <h4>Jun 2021</h4>
+                        </div>
+                    </div>
+                    <div class="experience">
+                        <h3>EXPERIENCE</h3>
+                        <div class="left-projects">
+                            <div class="job">
+                                <a href="https://github.com/JazaeloG/uvirtual" target="_blank"><h5>UVIRTUAL</h5></a>
+                                <div class="job-text">
+                                    <h6>2023</h6>
+                                </div>
+                            </div>
+                            <div class="job">
+                                <a href="/Calculadora/index.html" target="_blank"><h5>CALCULATOR</h5></a>
+                                <div class="job-text">
+                                    <h6>2023</h6>
+                                </div>
+                            </div>
+                            <div class="job">
+                                <a href="/Clima/index.html" target="_blank"><h5>WEATHER APP</h5></a>
+                                <div class="job-text">
+                                    <h6>2023</h6>
+                                </div>
+                            </div>
+                            <div class="job">
+                                <a href="/HolaMundo/holaMundo.html" target="_blank"><h5>HELLO WORLD</h5></a>
+                                <div class="job-text">
+                                    <h6>2023</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="right projects">
+                            <div class="job">
+                                <a href="/JSON/alumno.html" target="_blank"><h5>JSON</h5></a>
+                                <div class="job-text">
+                                    <h6>2023</h6>
+                                </div>
+                            </div>
+                            <div class="job">
+                                <a href="/operadores/index.html" target="_blank"><h5>TRIANGLES</h5></a>
+                                <div class="job-text">
+                                    <h6>2023</h6>
+                                </div>
+                            </div>
+                            <div class="job">
+                                <a href="/variables/index.html" target="_blank"><h5>VARIABLES</h5></a>
+                                <div class="job-text">
+                                    <h6>2023</h6>
+                                </div>
+                            </div>
+                            <div class="job">
+                                <a href="/Ciclos/index.html" target="_blank"><h5>LOOPS</h5></a>
+                                <div class="job-text">
+                                    <h6>2023</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="interests">
+                        <h3>INTERESTS</h3>
+                        <div class="interests-list">
+                            <ul>
+                                <li><img src="/img/interests-img/game-console.png" alt=""></li>
+                                <li><img src="/img/interests-img/boxing-glove.png" alt=""></li>
+                                <li><img src="/img/interests-img/chess.png" alt=""></li>
+                                <li><img src="/img/interests-img/baseball.png" alt=""></li>
+                                <li><img src="/img/interests-img/chef.png" alt=""></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="right-side">
+                    <div class="profile">
+                        <h3>PROFILE</h3>
+                        <div class="profile-text">
+                            <p>As an aspiring software engineer, my objective is to secure a position where I can apply and enhance my programming skills and knowledge in a dynamic and challenging environment. 
+                                I am seeking an opportunity to work with a team of experienced professionals who share my passion for technology and problem-solving. 
+                                My goal is to contribute to the development of innovative software solutions that have a positive impact on people's lives while continuing to learn and grow as a software engineer.</p>
+                        </div>
+                    </div>
+                    <div class="languages">
+                        <h3>LANGUAGES</h3>
+                        <div class="languages-list">
+                            <ul>
+                                <li>Spanish - Native Speaker</li>
+                                <li>English - B2 Level</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="social-media">
+                        <h3>SOCIAL MEDIA</h3>
+                        <div class="social-media-list">
+                            <a href="https://www.instagram.com/gerardosolanoo/"><img src="/img/social-media-img/instagram (1).png" alt=""></a>
+                            <a href="https://twitter.com/SweetKennys"><img src="/img/social-media-img/twitter (1).png" alt=""></a>
+                            <a href="https://github.com/GerardoSolanoo"><img src="/img/social-media-img/github (1).png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+            </main>
         </div>
-      <h2>LANGUAGES</h2>
-      <div class="lang">
-        <p>Spanish - First language</p>
-        <p>English - B1</p>
-      </div>
-    </section>
-    <section id="projects">
-      <h2>PROJECTS</h2>
-      <ul class="projects-container">
-        <li><a href="/Calculadora/index.html"><img src="/img/calculator.png" alt=""></a></li>
-        <li><a href="/Clima/index.html"><img src="/img/weather.png" alt=""></a></li>
-      </ul>
-    </section>    
-  </main>
-  <footer>
-    <p>&copy; 2023 - Gerardo Solano</p>
-  </footer>
-</body>
-</html>
+    </body>
+    </html>
