--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <h3>SOCIAL MEDIA</h3>
                         <div class="social-media-list">
                             <a href="https://www.instagram.com/gerardosolanoo/"><img src="/img/social-media-img/instagram (1).png" alt=""></a>
-                            <a href="https://twitter.com/SweetKennys"><img src="/img/social-media-img/twitter (1).png" alt=""></a>
+                            <a href="https://twitter.com/GerardoSolanoo"><img src="/img/social-media-img/twitter (1).png" alt=""></a>
                             <a href="https://github.com/GerardoSolanoo"><img src="/img/social-media-img/github (1).png" alt=""></a>
                         </div>
                     </div>
